--- a/example/index.html
+++ b/example/index.html
@@ -5,9 +5,16 @@
 
 		<link rel="stylesheet" href="../src/grid.css"/>
 		<style>
-			div {
-				border: 1px solid #FF0000;;
+
+			.grid {
+				margin: 20px;
 			}
+			
+			.grid div {
+				border: 1px solid #FF0000;
+			}
+
+
 		</style>
 	</head>
 	<body>
