--- a/example/index.html
+++ b/example/index.html
@@ -6,10 +6,16 @@
 		<link rel="stylesheet" href="../src/grid.css"/>
 		<style>
 
-			.grid {
-				margin: 20px;
+			html, body {
+				width: 100%;
+				height: 100%;
+
+				margin: 0;
+				padding: 0;
+
 			}
-			
+
+
 			.grid div {
 				border: 1px solid #FF0000;
 			}
