--- a/example/index.html
+++ b/example/index.html
@@ -15,6 +15,10 @@
 
 			}
 
+			.grid {
+				margin: 10px;
+				float: left;
+			}
 
 			.grid div {
 				border: 1px solid #FF0000;
@@ -58,6 +62,36 @@
 			<div class="s1 x1 y2"></div>
 			<div class="s1 x2 y2"></div>
 			<div class="s1 x3 y2"></div>
+
+			<div class="s1 x0 y3"></div>
+			<div class="s1 x1 y3"></div>
+			<div class="s1 x2 y3"></div>
+			<div class="s1 x3 y3"></div>
+		</div>
+
+		<div class="grid">
+			<div class="w3 h2 x0 y0"></div>
+			<div class="s1 x3 y0"></div>
+			<div class="s1 x3 y1"></div>
+
+			<div class="s1 x0 y2"></div>
+			<div class="s1 x1 y2"></div>
+			<div class="s1 x2 y2"></div>
+			<div class="s1 x3 y2"></div>
+
+			<div class="s1 x0 y3"></div>
+			<div class="s1 x1 y3"></div>
+			<div class="s1 x2 y3"></div>
+			<div class="s1 x3 y3"></div>
+		</div>
+
+
+		<div class="grid">
+			<div class="w3 h2 x0 y0"></div>
+			<div class="s1 x3 y0"></div>
+			<div class="s1 x3 y1"></div>
+
+			<div class="w4 h1 x0 y2"></div>
 
 			<div class="s1 x0 y3"></div>
 			<div class="s1 x1 y3"></div>
