--- a/example/index.html
+++ b/example/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title></title>
 
-		<link rel="stylesheet" href="../src/grid.css"/>
+		<link rel="stylesheet" href="example.css"/>
 		<style>
 
 			html, body {
